[tool.poetry]
name = "pycounts_kb"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Karan Bains"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
matplotlib = ">=3.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
